TAJO-261: Rearrange default port numbers and config names. (hyunsik)